--- a/index.html
+++ b/index.html
@@ -36,12 +36,28 @@
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
-                        <label for="date">Enter a Date <br>(1/1 - 1/13/2010)</label>
+                        <label for="date">Filter by Date <br>(1/1 - 1/13/2010)</label>
                         <input class="form-control" id="datetime" type="text" placeholder="1/10/2010">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="city">Filter by City </label>
+                        <input class="form-control" id="city" type="text" placeholder="san diego">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="date">Filter by State </label>
+                        <input class="form-control" id="state" type="text" placeholder="ca">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="date">Filter by Country <br></label>
+                        <input class="form-control" id="country" type="text" placeholder="us">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="date">Enter a Shape</label>
+                        <input class="form-control" id="shape" type="text" placeholder="disk">
                       </li>
                     </ul>
                   </div>
-                  <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                  <button id="filter-btn" type="button" style ="color:aqua" class="btn btn-default">Filter Table</button>
                 </form>
               </div>
             </div>
